fix desktop spacing on single pages

--- a/assets/less/single.less
+++ b/assets/less/single.less
@@ -189,7 +189,7 @@
 		}
 		.video-container {
 			margin: 0px -50px;
-			margin-top: -25px;
+			margin-top: -50px;
 			margin-bottom: 25px;
 			.video-area {
 				#chapters{
